# bird-listener

./: .dockerignore  .env.template  .gitignore  .python-version  CLAUDE.md  Dockerfile  config.py  config.template.yaml  docker-compose.yml  getSpecies.py  init.sh  predict.py  pyproject.toml  readme.md  recordAnalyse.py  requirements.txt
